@startuml

top to bottom direction
'skinparam linetype ortho

class Cargo {
  + origin: Location
  + trackingId: String
  + routeSpecification: RouteSpecification
  + delivery: Delivery
  + id: long
  + itineraryLegs: List<Leg>
}
class CarrierMovement {
  + id: long
  + departureLocation: Location
  + arrivalLocation: Location
  + arrivalTime: Instant
  + departureTime: Instant
}
class Delivery {
  + misdirected: boolean
  + calculatedAt: Instant
  + lastKnownLocation: Location
  + eta: Instant
  + nextExpectedActivity: HandlingActivity
  + transportStatus: TransportStatus
  + routingStatus: RoutingStatus
  + isUnloadedAtDestination: boolean
  + lastEvent: HandlingEvent
  + currentVoyage: Voyage
}
class HandlingActivity {
  + location: Location
  + voyage: Voyage
  + type: Type
}
class HandlingEvent {
  + type: Type
  + id: long
  + voyage: Voyage
  + location: Location
  + cargo: Cargo
  + completionTime: Instant
  + registrationTime: Instant
}
class HandlingHistory {
  - handlingEvents: List<HandlingEvent>
}
class Itinerary {
  - id: Long
  - legs: List<Leg>
}
class Leg {
  + voyage: Voyage
  + unloadTime: Instant
  + id: long
  + unloadLocation: Location
  + loadLocation: Location
  + loadTime: Instant
}
class RouteSpecification {
  + origin: Location
  + destination: Location
  + arrivalDeadline: Instant
}
class Schedule {
  - carrierMovements: List<CarrierMovement>
}

class Location {
  + id: long
  + name: String
  + unlocode: String
}

class Voyage {
  + id: long
  + carrierMovements: List<CarrierMovement>
  + voyageNumber: String
}

Cargo              "1" *--> "delivery\n1" Delivery           
Cargo               -->  Itinerary          : "«create»"
Cargo              "1" *--> "itineraryLegs\n*" Leg                
Cargo              "1" *--> "origin\n1" Location           
Cargo              "1" *--> "routeSpecification\n1" RouteSpecification 
CarrierMovement    "1" *--> "arrivalLocation\n1" Location           
Delivery            -->  HandlingActivity   : "«create»"
Delivery           "1" *--> "nextExpectedActivity\n1" HandlingActivity   
Delivery           "1" *--> "lastEvent\n1" HandlingEvent      
Delivery           "1" *--> "lastKnownLocation\n1" Location           
Delivery           "1" *--> "currentVoyage\n1" Voyage             
HandlingActivity   "1" *--> "location\n1" Location           
HandlingActivity   "1" *--> "voyage\n1" Voyage             
HandlingEvent      "1" *--> "cargo\n1" Cargo              
HandlingEvent      "1" *--> "location\n1" Location           
HandlingEvent      "1" *--> "voyage\n1" Voyage             
HandlingHistory    "1" *--> "handlingEvents\n*" HandlingEvent      
Itinerary          "1" *--> "legs\n*" Leg                
Leg                "1" *--> "loadLocation\n1" Location           
Leg                "1" *--> "voyage\n1" Voyage             
RouteSpecification "1" *--> "origin\n1" Location           
Schedule           "1" *--> "carrierMovements\n*" CarrierMovement    
Voyage             "1" *--> "carrierMovements\n*" CarrierMovement    
Voyage              -->  Schedule           : "«create»"
@enduml
